♻️ Refactor code and integrate
